# serializer version: 1
# name: TestComplete.test_ok
  dict({
    'complete': True,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 100,
    'step': 'dummy_task',
    'type': 'dummy_task',
  })
# ---
# name: TestGet.test_ok
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 0,
    'step': 'clone_reference',
    'type': 'clone_reference',
  })
# ---
# name: TestUpdate.test_ok[error][pg]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': 'failed_task',
    'file_size': None,
    'id': 1,
    'progress': 0,
    'step': 'dummy_task',
    'type': 'dummy_task',
  })
# ---
# name: TestUpdate.test_ok[error][return_value]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': 'failed_task',
    'file_size': None,
    'id': 1,
    'progress': 0,
    'step': 'dummy_task',
    'type': 'dummy_task',
  })
# ---
# name: TestUpdate.test_ok[progress][pg]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 55,
    'step': 'dummy_task',
    'type': 'dummy_task',
  })
# ---
# name: TestUpdate.test_ok[progress][return_value]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 55,
    'step': 'dummy_task',
    'type': 'dummy_task',
  })
# ---
# name: TestUpdate.test_ok[step][pg]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 0,
    'step': 'two',
    'type': 'dummy_task',
  })
# ---
# name: TestUpdate.test_ok[step][return_value]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 0,
    'step': 'two',
    'type': 'dummy_task',
  })
# ---
# name: TestUpdate.test_ok[step_progress][pg]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 55,
    'step': 'three',
    'type': 'dummy_task',
  })
# ---
# name: TestUpdate.test_ok[step_progress][return_value]
  dict({
    'complete': False,
    'context': dict({
      'user_id': 'test_1',
    }),
    'count': 0,
    'created_at': 'approximately_now_datetime',
    'error': None,
    'file_size': None,
    'id': 1,
    'progress': 55,
    'step': 'three',
    'type': 'dummy_task',
  })
# ---
